--- a/x360ce.Web/x360ce.Web.csproj
+++ b/x360ce.Web/x360ce.Web.csproj
@@ -42,7 +42,8 @@
     <DebugSymbols>true</DebugSymbols>
     <PublishDatabases>false</PublishDatabases>
     <PackageAsSingleFile>false</PackageAsSingleFile>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>
+    </CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
     <RunCodeAnalysis>false</RunCodeAnalysis>
   </PropertyGroup>
