--- a/x360ce.App.Beta/x360ce.App.csproj
+++ b/x360ce.App.Beta/x360ce.App.csproj
@@ -289,6 +289,9 @@
     <Compile Include="Controls\OptionsVirtualDeviceControl.xaml.cs">
       <DependentUpon>OptionsVirtualDeviceControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\PadTabPages\DirectInputUserControl.xaml.cs">
+      <DependentUpon>DirectInputUserControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\PadTabPages\General\PadControlImager.cs" />
     <Compile Include="Controls\PadTabPages\IPadControl.cs" />
     <Compile Include="Controls\PresetsControl.xaml.cs">
@@ -305,12 +308,6 @@
     </Compile>
     <Compile Include="Controls\SettingsListControl.xaml.cs">
       <DependentUpon>SettingsListControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\AxisToButtonUserControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\AxisToButtonUserControl.Designer.cs">
-      <DependentUpon>AxisToButtonUserControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\PadTabPages\MacrosControl.xaml.cs">
       <DependentUpon>MacrosControl.xaml</DependentUpon>
@@ -344,12 +341,6 @@
     </Compile>
     <Compile Include="Forms\BaseFormWithHeader.Designer.cs">
       <DependentUpon>BaseFormWithHeader.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\PadTabPages\DirectInputControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\PadTabPages\DirectInputControl.Designer.cs">
-      <DependentUpon>DirectInputControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\GameDetailsUserControl.cs">
       <SubType>UserControl</SubType>
@@ -469,9 +460,6 @@
     <Compile Include="ViGEm\Client\ViGEmTarget.cs" />
     <Compile Include="ViGEm\Client\Enums\VIGEM_ERROR.cs" />
     <Compile Include="ViGEm\HidGuardianHelper.cs" />
-    <EmbeddedResource Include="Controls\AxisToButtonUserControl.resx">
-      <DependentUpon>AxisToButtonUserControl.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Controls\ProgramsGridUserControl.resx">
       <DependentUpon>ProgramsGridUserControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -480,10 +468,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\BaseFormWithHeader.resx">
       <DependentUpon>BaseFormWithHeader.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Controls\PadTabPages\DirectInputControl.resx">
-      <DependentUpon>DirectInputControl.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\GameDetailsUserControl.resx">
@@ -794,6 +778,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\OptionsVirtualDeviceControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\PadTabPages\DirectInputUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
