--- a/x360ce.App.Beta/x360ce.App.csproj
+++ b/x360ce.App.Beta/x360ce.App.csproj
@@ -306,12 +306,6 @@
     <Compile Include="Controls\ProgramItemControl.xaml.cs">
       <DependentUpon>ProgramItemControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\ProgramsGridUserControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Controls\ProgramsGridUserControl.Designer.cs">
-      <DependentUpon>ProgramsGridUserControl.cs</DependentUpon>
-    </Compile>
     <Compile Include="Controls\ProgramListControl.xaml.cs">
       <DependentUpon>ProgramListControl.xaml</DependentUpon>
     </Compile>
@@ -332,6 +326,12 @@
     </Compile>
     <Compile Include="Controls\UserDevicesControl.xaml.cs">
       <DependentUpon>UserDevicesControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\UserProgramListControl.xaml.cs">
+      <DependentUpon>UserProgramListControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\UserProgramsControl.xaml.cs">
+      <DependentUpon>UserProgramsControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\_TempWIN2WPF.com.cs">
       <SubType>UserControl</SubType>
@@ -469,9 +469,6 @@
     <Compile Include="ViGEm\Client\ViGEmTarget.cs" />
     <Compile Include="ViGEm\Client\Enums\VIGEM_ERROR.cs" />
     <Compile Include="ViGEm\HidGuardianHelper.cs" />
-    <EmbeddedResource Include="Controls\ProgramsGridUserControl.resx">
-      <DependentUpon>ProgramsGridUserControl.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Controls\_TempWIN2WPF.com.resx">
       <DependentUpon>_TempWIN2WPF.com.cs</DependentUpon>
     </EmbeddedResource>
@@ -839,6 +836,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\BaseWithHeaderControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\UserProgramListControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\UserProgramsControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
