Converting Axis Map control from Windows Forms to WPF.

--- a/x360ce.App.Beta/.editorconfig
+++ b/x360ce.App.Beta/.editorconfig
@@ -23,7 +23,7 @@ dotnet_diagnostic.IDE0004.severity = error # IDE0004: Remove unnecessary cast
 dotnet_diagnostic.IDE0005.severity = error # IDE0005: Remove unnecessary import
 dotnet_diagnostic.IDE0035.severity = error # IDE0035: Remove unreachable code
 dotnet_diagnostic.IDE0051.severity = error # IDE0051: Remove unused private member
-dotnet_diagnostic.IDE0052.severity = error # IDE0052: Remove unread private member
+#--dotnet_diagnostic.IDE0052.severity = error # IDE0052: Remove unread private member
 #dotnet_diagnostic.IDE0058.severity = error # IDE0058: Remove unused expression value
 #dotnet_diagnostic.IDE0059.severity = error # IDE0059: Remove unnecessary value assignment
 dotnet_diagnostic.IDE0060.severity = error # IDE0060: Remove unused parameter
