--- a/x360ce.App.Beta/x360ce.App.csproj
+++ b/x360ce.App.Beta/x360ce.App.csproj
@@ -363,9 +363,10 @@
     <Compile Include="Converters\BoolToImageSourceConverter.cs" />
     <Compile Include="Converters\ChecksumToIdConverter.cs" />
     <Compile Include="Converters\ConnectionClassToImageConverter.cs" />
-    <Compile Include="Converters\DeadZoneConverter.cs" />
+    <Compile Include="Converters\PaddSettingToIntegerConverter.cs" />
     <Compile Include="Converters\MapToIntToDescription.cs" />
     <Compile Include="Converters\MapTypeConverter.cs" />
+    <Compile Include="Converters\PadSettingToEnumConverter.cs" />
     <Compile Include="Forms\BaseFormWithHeader.cs">
       <SubType>Form</SubType>
     </Compile>
