Updating PAD List control from Windows Forms to WPF/XAML.

--- a/x360ce.App.Beta/x360ce.App.csproj
+++ b/x360ce.App.Beta/x360ce.App.csproj
@@ -256,6 +256,9 @@
     <Compile Include="Controls\AxisToButtonControl.xaml.cs">
       <DependentUpon>AxisToButtonControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\PadFootControl.xaml.cs">
+      <DependentUpon>PadFootControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\PadItem_ButtonsControl.xaml.cs">
       <DependentUpon>PadItem_ButtonsControl.xaml</DependentUpon>
     </Compile>
@@ -746,6 +749,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\AxisToButtonControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\PadFootControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
