--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -200,8 +200,15 @@
     <Compile Include="Data\IProgram.cs" />
     <Compile Include="Data\Layout.cs" />
     <Compile Include="Data\UserMacro.cs" />
+    <Compile Include="JocysCom\Controls\IssuesControl\IssuesControl.xaml.cs">
+      <DependentUpon>IssuesControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="JocysCom\Controls\IssuesControl\SeverityToImageConverter.cs" />
     <Compile Include="JocysCom\Controls\MessageBoxWindow.xaml.cs">
       <DependentUpon>MessageBoxWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="JocysCom\Controls\Themes\Icons.xaml.cs">
+      <DependentUpon>Icons.xaml</DependentUpon>
     </Compile>
     <Compile Include="JocysCom\Data\BindableItem.cs" />
     <Compile Include="JocysCom\Diagnostics\RollingWriterOptions.cs" />
@@ -548,6 +555,10 @@
     <Page Include="JocysCom\Controls\ErrorReportControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="JocysCom\Controls\IssuesControl\IssuesControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="JocysCom\Controls\MessageBoxWindow.xaml">
       <SubType>Designer</SubType>
