--- a/x360ce.App.Beta/x360ce.App.csproj
+++ b/x360ce.App.Beta/x360ce.App.csproj
@@ -447,6 +447,9 @@
     <Compile Include="Issues\HidGuardianDriverIssue.cs" />
     <Compile Include="Issues\VirtualDeviceDriverIssue.cs" />
     <Compile Include="Issues\XboxDriversIssue.cs" />
+    <Compile Include="MainBodyControl.xaml.cs">
+      <DependentUpon>MainBodyControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.Tray.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
       <SubType>Form</SubType>
@@ -898,6 +901,10 @@
     <Page Include="Forms\UserDevicesWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="MainBodyControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Resources\Icons\Icons_Default.xaml">
       <Generator>MSBuild:Compile</Generator>
